VTK_DEPENDENT_OPTION(VTK_USE_QVTK_QTOPENGL "Use QtOpenGL in QVTK" OFF
                     "VTK_USE_QVTK" OFF)
MARK_AS_ADVANCED(VTK_USE_QVTK_QTOPENGL)

IF(WIN32)
  VTK_DEPENDENT_OPTION(VTK_USE_MFC "Build MFC classes for VTK" OFF
                       "VTK_USE_GUISUPPORT;VTK_USE_RENDERING" OFF)
ENDIF(WIN32)

IF(VTK_USE_QVTK)
  ADD_SUBDIRECTORY(Qt)
ENDIF(VTK_USE_QVTK)

IF(VTK_USE_MFC)
  ADD_SUBDIRECTORY(MFC)
ENDIF(VTK_USE_MFC)
